# superset-dbt-fed

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
airbyte/: docker-compose.yml
config/: base.py  database.py  fred.py  superset.py
data_ingestion/: Dockerfile  config.py  fred_downloader.py  pyproject.toml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: exposures.yml
dbt_project/models/marts/: gdp_yearly.sql  schema.yml
dbt_project/models/src/: sources.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_fred_gdpc1.sql
dbt_project/snapshots/: gdp_yearly_snapshot.sql
docker/: docker-compose.yml
docker/superset/: Dockerfile
postgres/: init.sql
scripts/: run_pipeline.sh
superset/: Dockerfile  superset_config.py  superset_entrypoint.sh
superset/dashboards/: us_gdp_data_quality_history.yaml  us_gdp_growth_analysis.yaml  us_gdp_overview.yaml
superset/datasets/: gdp_yearly.yaml
