[project]
name = "superset-dbt-fed"
version = "0.1.0"
description = "An end-to-end data pipeline for Federal Reserve Economic Data (FRED) data."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dbt-core>=1.11.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
]
